smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-structure-member.smithy
// Parse error at line 6, column 14 near `= `: Expected a valid identifier character, but found '='
$version: "2.0"
namespace smithy.example

structure Structure {
    inlined := String
}
